# dmr-dishka

./: .mypy.ini  .pytest.toml  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/django_example/: manage.py
src/django_example/app/: asgi.py  dmr_views.py  ioc.py  settings.py  urls.py  views.py  wsgi.py
src/dmr_dishka/: __init__.py  container.py  exceptions.py  integration.py  provider.py
tests/: conftest.py  test_fail.py  test_integration.py  test_middleware.py
