[project]
name = "dmr_dishka"
version = "v0.0.1-alpha1"
description = "Integration of Dishka dependency injection framework and Modern REST framework for Django with types and async support!"
readme = "README.md"
authors = [{ name = "Artur Boyun", email = "arturboyun@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["daphne>=4.2.1", "dishka>=1.8.0", "django>=5.2.0"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
urls = { "Source Code" = "https://github.com/arturboyun/dmr-dishka", "Issues" = "https://github.com/arturboyun/dmr-dishka/issues" }
keywords = [
    "django",
    "dependency injection",
    "di",
    "async",
    "types",
    "modern rest",
    'python',
    'dishka',
    'dmr',
    'django modern rest',
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv_build]
include = ["src/dmr_dishka", "src/django_example"]

[dependency-groups]
dev = [
    "django_modern_rest@git+https://github.com/wemake-services/django-modern-rest",
    "django-stubs>=5.2.9",
    "msgspec>=0.20.0",
    "mypy>=1.19.1",
    "nox>=2026.2.9",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.2",
]
